--- a/spot-cms-base/pom.xml
+++ b/spot-cms-base/pom.xml
@@ -13,7 +13,7 @@
 	</parent>
 
 	<properties>
-		<ognl.version>3.1.12</ognl.version>
+		<ognl.version>3.2.8</ognl.version>
 	</properties>
 
 	<build>
@@ -74,6 +74,10 @@
 					<groupId>org.slf4j</groupId>
 					<artifactId>slf4j-api</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>org.javassist</groupId>
+					<artifactId>javassist</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 
@@ -99,6 +103,12 @@
 			<groupId>ognl</groupId>
 			<artifactId>ognl</artifactId>
 			<version>${ognl.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.javassist</groupId>
+					<artifactId>javassist</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<!-- <dependency> -->
