--- a/spot-core-shell/pom.xml
+++ b/spot-core-shell/pom.xml
@@ -27,7 +27,7 @@
 			<!-- CODE ANALYSIS -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>findbugs-maven-plugin</artifactId>
+				<artifactId>spotbugs-maven-plugin</artifactId>
 			</plugin>
 
 			<plugin>
