--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,8 @@ before_install:
 
 install: true
 
-script: "mvn -e clean install findbugs:check"
+#script: "mvn -e clean install spotbugs:check"
+script: "mvn -e clean install"
 
 deploy:
   - provider: script
