added errorprone compiler plugin, fixed some spotbugs findings

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,8 +40,7 @@ before_install:
 
 install: true
 
-#script: "mvn -e clean install spotbugs:check"
-script: "mvn -e clean install"
+script: "mvn -e clean install spotbugs:check"
 
 deploy:
   - provider: script
