--- a/pom.xml
+++ b/pom.xml
@@ -70,23 +70,87 @@
 			<activation>
 				<jdk>1.8</jdk>
 			</activation>
+			<properties>
+				<maven.compiler.source>1.8</maven.compiler.source>
+				<maven.compiler.target>1.8</maven.compiler.target>
+				<java.version>1.8</java.version>
+			</properties>
 			<build>
 				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-compiler-plugin</artifactId>
 						<configuration>
-							<fork>true</fork>
-							<compilerArgs combine.children="append">
-								<arg>
-									-J-Xbootclasspath/p:${settings.localRepository}/com/google/errorprone/javac/${javac.version}/javac-${javac.version}.jar
-								</arg>
-							</compilerArgs>
+							<excludes>
+								<exclude>**/module-info.java</exclude>
+							</excludes>
 						</configuration>
 					</plugin>
 				</plugins>
 			</build>
 		</profile>
+		<profile>
+			<id>jdk9</id>
+			<activation>
+				<jdk>1.9</jdk>
+			</activation>
+			<properties>
+				<maven.compiler.source>1.9</maven.compiler.source>
+				<maven.compiler.target>1.9</maven.compiler.target>
+				<java.version>1.9</java.version>
+			</properties>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<configuration>
+							<forceJavacCompilerUse>true</forceJavacCompilerUse>
+							<compilerArgs>
+								<arg>-XDcompilePolicy=simple</arg>
+								<arg>-Xplugin:ErrorProne</arg>
+							</compilerArgs>
+							<annotationProcessorPaths>
+								<path>
+									<groupId>com.google.errorprone</groupId>
+									<artifactId>error_prone_core</artifactId>
+									<version>2.3.2</version>
+								</path>
+							</annotationProcessorPaths>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --illegal-access=deny</argLine>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<configuration>
+							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --illegal-access=deny</argLine>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>com.github.spotbugs</groupId>
+						<artifactId>spotbugs-maven-plugin</artifactId>
+						<configuration>
+							<jvmArgs>--add-opens java.base/java.lang=ALL-UNNAMED --illegal-access=deny</jvmArgs>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-maven-plugin</artifactId>
+						<configuration>
+							<jvmArguments>--add-opens java.base/java.lang=ALL-UNNAMED</jvmArguments>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
 	</profiles>
 
 	<scm>
@@ -164,8 +228,8 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.compiler.source>1.9</maven.compiler.source>
 		<maven.compiler.target>1.9</maven.compiler.target>
+		<java.version>1.9</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>9</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<aspectj.version>1.9.2</aspectj.version>
 
@@ -362,18 +426,6 @@
 						<source>${java.version}</source>
 						<target>${java.version}</target>
 						<useIncrementalCompilation>true</useIncrementalCompilation>
-						<forceJavacCompilerUse>true</forceJavacCompilerUse>
-						<compilerArgs>
-							<arg>-XDcompilePolicy=simple</arg>
-							<arg>-Xplugin:ErrorProne</arg>
-						</compilerArgs>
-						<annotationProcessorPaths>
-							<path>
-								<groupId>com.google.errorprone</groupId>
-								<artifactId>error_prone_core</artifactId>
-								<version>2.3.2</version>
-							</path>
-						</annotationProcessorPaths>
 					</configuration>
 				</plugin>
 
@@ -534,7 +586,6 @@
 					<artifactId>spotbugs-maven-plugin</artifactId>
 					<version>3.1.8</version>
 					<configuration>
-						<jvmArgs>--add-opens java.base/java.lang=ALL-UNNAMED --illegal-access=deny</jvmArgs>
 						<effort>more</effort>
 					</configuration>
 					<executions>
@@ -591,9 +642,6 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.18.1</version>
-					<configuration>
-						<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --illegal-access=deny</argLine>
-					</configuration>
 				</plugin>
 
 				<plugin>
@@ -604,7 +652,6 @@
 						<includes>
 							<include>**/*IT.java</include>
 						</includes>
-						<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --illegal-access=deny</argLine>
 					</configuration>
 					<executions>
 						<execution>
