--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -28,7 +28,7 @@
 					</compilerArgs>
 				</configuration>
 			</plugin>
-		
+
 			<!-- RESOURCE GENERTATION -->
 			<plugin>
 				<groupId>io.spot-next</groupId>
@@ -43,9 +43,9 @@
 			<plugin>
 				<groupId>com.github.spotbugs</groupId>
 				<artifactId>spotbugs-maven-plugin</artifactId>
-				<!--<configuration>-->
-					<!--<excludeFilterFile>${project.build.directory}/classes/module-info-exclude.xml</excludeFilterFile>-->
-				<!--</configuration>-->
+				<!--<configuration> -->
+				<!--<excludeFilterFile>${project.build.directory}/classes/module-info-exclude.xml</excludeFilterFile> -->
+				<!--</configuration> -->
 			</plugin>
 
 			<plugin>
@@ -217,5 +217,20 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-core</artifactId>
+			<version>2.3.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
 	</dependencies>
 </project>
