--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -11,6 +11,30 @@
 		<version>${revision}</version>
 	</parent>
 
+	<profiles>
+		<profile>
+			<id>jdk9</id>
+			<activation>
+				<jdk>[1.9,)</jdk>
+			</activation>
+			<build>
+				<plugins>
+					<!-- COMPILING -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<configuration>
+							<compilerArgs>
+								<compilerArg>--patch-module</compilerArg>
+								<compilerArg>hamcrest.library=${user.home}/.m2/repository/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar</compilerArg>
+							</compilerArgs>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 	<properties>
 		<jar.mainclass>org.springframework.shell.Bootstrap</jar.mainclass>
 	</properties>
@@ -21,12 +45,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<compilerArgs>
-						<compilerArg>--patch-module</compilerArg>
-						<compilerArg>hamcrest.library=${user.home}/.m2/repository/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar</compilerArg>
-					</compilerArgs>
-				</configuration>
 			</plugin>
 
 			<!-- RESOURCE GENERTATION -->
