--- a/spot-maven-plugin/pom.xml
+++ b/spot-maven-plugin/pom.xml
@@ -11,20 +11,37 @@
 		<version>${revision}</version>
 	</parent>
 
+	<profiles>
+		<profile>
+			<id>jdk9</id>
+			<activation>
+				<jdk>[1.9,)</jdk>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<configuration>
+							<compilerArgs>
+								<compilerArg>--patch-module</compilerArg>
+								<compilerArg>maven.artifact=${user.home}/.m2/repository/org/apache/maven/maven-core/3.6.0/maven-core-3.6.0.jar</compilerArg>
+								<compilerArg>--add-exports</compilerArg>
+								<compilerArg>java.xml/com.sun.xml.internal.bind.v2.ContextFactory=ALL-UNNAMED</compilerArg>
+							</compilerArgs>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 	<build>
 		<plugins>
 			<!-- COMPILING -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<compilerArgs>
-						<compilerArg>--patch-module</compilerArg>
-						<compilerArg>maven.artifact=${user.home}/.m2/repository/org/apache/maven/maven-core/3.6.0/maven-core-3.6.0.jar</compilerArg>
-						<compilerArg>--add-exports</compilerArg>
-						<compilerArg>java.xml/com.sun.xml.internal.bind.v2.ContextFactory=ALL-UNNAMED</compilerArg>
-					</compilerArgs>
-				</configuration>
 			</plugin>
 
 			<plugin>
@@ -108,13 +125,6 @@
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-project</artifactId>
 			<version>2.2.1</version>
-			<!-- <version>3.0-alpha-2</version> -->
-			<!-- <exclusions> -->
-			<!-- <exclusion> -->
-			<!-- <groupId>org.codehaus.plexus</groupId> -->
-			<!-- <artifactId>plexus-component-annotations</artifactId> -->
-			<!-- </exclusion> -->
-			<!-- </exclusions> -->
 		</dependency>
 		<dependency>
 			<groupId>org.apache.maven</groupId>
