--- a/pom.xml
+++ b/pom.xml
@@ -785,6 +785,10 @@
 						<keepStagingRepositoryOnFailure>true</keepStagingRepositoryOnFailure>
 						<stagingProfileId>5f2e64bdcef503</stagingProfileId>
 						<stagingDescription>spOt staging repo</stagingDescription>
+						
+						<!-- TODO: disable if possible -->
+						<sslInsecure>true</sslInsecure>
+						<sslAllowAll>true</sslAllowAll>
 					</configuration>
 					<executions>
 						<execution>
