--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -26,7 +26,7 @@
 						<configuration>
 							<compilerArgs>
 								<compilerArg>--patch-module</compilerArg>
-								<compilerArg>hamcrest.library=${user.home}/.m2/repository/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar</compilerArg>
+								<compilerArg>hamcrest.core=hamcrest-core-1.3.jar</compilerArg>
 							</compilerArgs>
 						</configuration>
 					</plugin>
@@ -110,6 +110,16 @@
 			<groupId>io.spot-next</groupId>
 			<artifactId>spot-core-support</artifactId>
 			<version>${revision}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.hamcrest</groupId>
+					<artifactId>hamcrest-library</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.hamcrest</groupId>
+					<artifactId>hamcrest-core</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<!-- -->
@@ -233,6 +243,16 @@
 			<artifactId>rest-assured</artifactId>
 			<version>3.2.0</version>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.hamcrest</groupId>
+					<artifactId>hamcrest-library</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.hamcrest</groupId>
+					<artifactId>hamcrest-core</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
@@ -249,6 +269,12 @@
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
 			<version>2.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>1.3</version>
+<!-- 			<scope>test</scope> -->
 		</dependency>
 	</dependencies>
 </project>
