--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
 			</build>
 		</profile>
 		<profile>
-			<id>jdk9</id>
+			<id>jdk9+</id>
 			<activation>
 				<jdk>[1.9,)</jdk>
 			</activation>
@@ -153,6 +153,17 @@
 					</plugins>
 				</pluginManagement>
 			</build>
+		</profile>
+		<profile>
+			<id>jdk10+</id>
+			<activation>
+				<jdk>[1.10,)</jdk>
+			</activation>
+			<properties>
+				<maven.compiler.source>10</maven.compiler.source>
+				<maven.compiler.target>10</maven.compiler.target>
+				<java.version>10</java.version>
+			</properties>
 		</profile>
 
 	</profiles>
@@ -785,7 +796,7 @@
 						<keepStagingRepositoryOnFailure>true</keepStagingRepositoryOnFailure>
 						<stagingProfileId>5f2e64bdcef503</stagingProfileId>
 						<stagingDescription>spOt staging repo</stagingDescription>
-						
+
 						<!-- TODO: disable if possible -->
 						<sslInsecure>true</sslInsecure>
 						<sslAllowAll>true</sslAllowAll>
