--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -23,12 +23,6 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-compiler-plugin</artifactId>
-						<configuration>
-							<compilerArgs>
-								<compilerArg>--patch-module</compilerArg>
-								<compilerArg>hamcrest.library=${user.home}/.m2/repository/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar</compilerArg>
-							</compilerArgs>
-						</configuration>
 					</plugin>
 				</plugins>
 			</build>
@@ -88,6 +82,19 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
+			</plugin>
+			
+			<!-- PACKAGING -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifestEntries>
+							<Automatic-Module-Name>io.spotnext.core</Automatic-Module-Name>
+						</manifestEntries>
+					</archive>
+				</configuration>
 			</plugin>
 
 			<!-- RELEASE -->
