--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,7 @@
 							<artifactId>maven-failsafe-plugin</artifactId>
 							<configuration>
 								<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --illegal-access=deny</argLine>
+								 <!--<debugForkedProcess>true</debugForkedProcess>-->
 							</configuration>
 						</plugin>
 						<plugin>
@@ -156,9 +157,20 @@
 			</build>
 		</profile>
 		<profile>
-			<id>jdk10+</id>
+			<id>jdk10</id>
 			<activation>
-				<jdk>[10,)</jdk>
+				<jdk>10</jdk>
+			</activation>
+			<properties>
+				<maven.compiler.source>10</maven.compiler.source>
+				<maven.compiler.target>10</maven.compiler.target>
+				<java.version>10</java.version>
+			</properties>
+		</profile>
+		<profile>
+			<id>jdk11+</id>
+			<activation>
+				<jdk>[11,)</jdk>
 			</activation>
 			<properties>
 				<!-- java 11 cannot leads to a lot of errors, so we stay on 10 for now -->
@@ -246,6 +258,9 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<aspectj.version>1.9.2</aspectj.version>
+		<maven.compiler.source>10</maven.compiler.source>
+		<maven.compiler.target>10</maven.compiler.target>
+		<java.version>10</java.version>
 
 		<!-- misc -->
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
