--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -35,10 +35,6 @@
 		</profile>
 	</profiles>
 
-	<properties>
-		<jar.mainclass>org.springframework.shell.Bootstrap</jar.mainclass>
-	</properties>
-
 	<build>
 		<plugins>
 			<!-- COMPILING -->
@@ -110,16 +106,6 @@
 			<groupId>io.spot-next</groupId>
 			<artifactId>spot-core-support</artifactId>
 			<version>${revision}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.hamcrest</groupId>
-					<artifactId>hamcrest-library</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.hamcrest</groupId>
-					<artifactId>hamcrest-core</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 
 		<!-- -->
@@ -274,7 +260,17 @@
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-all</artifactId>
 			<version>1.3</version>
-<!-- 			<scope>test</scope> -->
+			<!-- <scope>test</scope> -->
+		</dependency>
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>javax.el</artifactId>
+			<version>3.0.1-b10</version>
 		</dependency>
 	</dependencies>
 </project>
