--- a/pom.xml
+++ b/pom.xml
@@ -135,7 +135,6 @@
 							<artifactId>maven-failsafe-plugin</artifactId>
 							<configuration>
 								<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --illegal-access=deny</argLine>
-								 <!--<debugForkedProcess>true</debugForkedProcess>-->
 							</configuration>
 						</plugin>
 						<plugin>
@@ -671,6 +670,9 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.18.1</version>
+					<configuration>
+						<!-- <debugForkedProcess>true</debugForkedProcess> -->
+					</configuration>
 				</plugin>
 
 				<plugin>
@@ -681,6 +683,7 @@
 						<includes>
 							<include>**/*IT.java</include>
 						</includes>
+<!-- 						<debugForkedProcess>true</debugForkedProcess> -->
 					</configuration>
 					<executions>
 						<execution>
