--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -11,6 +11,10 @@
 		<version>${revision}</version>
 	</parent>
 
+	<properties>
+		<jar.mainclass>io.spotnext.core.CoreInit</jar.mainclass>
+	</properties>
+
 	<build>
 		<plugins>
 			<!-- COMPILING -->
@@ -61,7 +65,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
 			</plugin>
-			
+
 			<!-- PACKAGING -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -70,6 +74,7 @@
 					<archive>
 						<manifestEntries>
 							<Automatic-Module-Name>io.spotnext.core</Automatic-Module-Name>
+							<Main-Class>${jar.mainclass}</Main-Class>
 						</manifestEntries>
 					</archive>
 				</configuration>
@@ -79,6 +84,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>${jar.mainclass}</mainClass>
+				</configuration>
 			</plugin>
 
 		</plugins>
