--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -19,7 +19,7 @@ service.typesystem.rest.port=19000
 #service.typesystem.rest.keystore.password=atcP}U#P[%Y794+U
 
 # HIBERNATE
-service.persistene.transaction.timeout=600
+service.persistence.transaction.timeout=600
 service.persistence.hibernate.show_sql=false
 service.persistence.hibernate.format_sql=false
 service.persistence.hibernate.hbm2ddl.auto=none
