fix hibernate issues ...

--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -183,6 +183,11 @@
 		<!-- persistence -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.3.7.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-ehcache</artifactId>
 			<version>5.3.7.Final</version>
 		</dependency>
