--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -186,6 +186,16 @@
 			<artifactId>hibernate-ehcache</artifactId>
 			<version>5.3.7.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>org.datanucleus</groupId>
+			<artifactId>datanucleus-core</artifactId>
+			<version>[5.0.0-m1, 5.9)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.datanucleus</groupId>
+			<artifactId>datanucleus-rdbms</artifactId>
+			<version>[5.0.0-m1, 5.9)</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.hsqldb</groupId>
