--- a/archetype-empty/src/main/resources/archetype-resources/src/main/resources/data/initial/currencies.impex.template
+++ b/archetype-empty/src/main/resources/archetype-resources/src/main/resources/data/initial/currencies.impex.template
@@ -1,1 +1,2 @@
-../../../../../../../../../../spot-core/src/main/resources/data/initial/currencies.impex
+INSERT Currency ; isoCode  ; name[lang=de_DE] ; name[lang=en_GB] 
+                ; eur      ; Euro             ; Euro
