--- a/spot-maven-plugin/pom.xml
+++ b/spot-maven-plugin/pom.xml
@@ -11,6 +11,10 @@
 		<version>${revision}</version>
 	</parent>
 
+	<properties>
+		<teavm.version>0.5.1</teavm.version>
+	</properties>
+
 	<build>
 		<plugins>
 			<!-- COMPILING -->
@@ -75,20 +79,32 @@
 			<groupId>io.spot-next</groupId>
 			<artifactId>spot-core-infrastructure</artifactId>
 			<version>${revision}</version>
-<!-- 			<exclusions> -->
-<!-- 				<exclusion> -->
-<!-- 					<groupId>org.aspectj</groupId> -->
-<!-- 					<artifactId>aspectjtools</artifactId> -->
-<!-- 				</exclusion> -->
-<!-- 				<exclusion> -->
-<!-- 					<groupId>org.apache.logging.log4j</groupId> -->
-<!-- 					<artifactId>log4j-core</artifactId> -->
-<!-- 				</exclusion> -->
-<!-- 				<exclusion> -->
-<!-- 					<groupId>org.apache.logging.log4j</groupId> -->
-<!-- 					<artifactId>log4j-api</artifactId> -->
-<!-- 				</exclusion> -->
-<!-- 			</exclusions> -->
+			<!-- <exclusions> -->
+			<!-- <exclusion> -->
+			<!-- <groupId>org.aspectj</groupId> -->
+			<!-- <artifactId>aspectjtools</artifactId> -->
+			<!-- </exclusion> -->
+			<!-- <exclusion> -->
+			<!-- <groupId>org.apache.logging.log4j</groupId> -->
+			<!-- <artifactId>log4j-core</artifactId> -->
+			<!-- </exclusion> -->
+			<!-- <exclusion> -->
+			<!-- <groupId>org.apache.logging.log4j</groupId> -->
+			<!-- <artifactId>log4j-api</artifactId> -->
+			<!-- </exclusion> -->
+			<!-- </exclusions> -->
+		</dependency>
+
+		<dependency>
+			<groupId>org.teavm</groupId>
+			<artifactId>teavm-maven-plugin</artifactId>
+			<version>${teavm.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.maven</groupId>
+					<artifactId>maven-plugin-api</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<!-- The dependency to the maven API -->
@@ -116,7 +132,7 @@
 			<version>3.6.0</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<!-- java code generation and formatting -->
 		<dependency>
 			<groupId>org.jboss.forge.roaster</groupId>
@@ -134,7 +150,7 @@
 			<artifactId>velocity-engine-core</artifactId>
 			<version>2.0</version>
 		</dependency>
-		
+
 		<!-- general stuff -->
 		<dependency>
 			<groupId>commons-io</groupId>
