cronjob infrastructure refactoring

--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -14,7 +14,7 @@ init.default.admin.username=admin
 init.default.admin.password=MD5:ee10c315eba2c75b403ea99136f5b48d
 
 # CRONJOBS
-service.cronjob.startonboot=true
+service.cronjob.scheduleonboot=true
 service.cronjob.poolsize=5
 
 service.typesystem.rest.port=19000
