--- a/spot-core-support/pom.xml
+++ b/spot-core-support/pom.xml
@@ -79,11 +79,19 @@
 			<version>3.11</version>
 		</dependency>
 
+		<!-- <dependency> -->
+		<!-- <groupId>junit</groupId> -->
+		<!-- <artifactId>junit</artifactId> -->
+		<!-- <version>4.13.1</version> -->
+		<!-- </dependency> -->
+
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>5.7.0</version>
+			<scope>test</scope>
 		</dependency>
+
 
 	</dependencies>
 </project>
